Changes to Invoices - select client added, Remove All button added to invoices, finalised UI changes in Invoice Items

--- a/styles.html
+++ b/styles.html
@@ -230,7 +230,7 @@
     </div>
   </template>
 
-  <!-- MARK: ADD CLIENT MODAL -->
+  <!-- MARK: Select CLIENT MODAL -->
   <div x-show="showClientModal" x-transition.opacity.duration.300ms class="outter-modal-overlay-blur-fixed z-50">
     <!-- Clients Modal Body -->
     <div
