Changed tittle to Invoice in invoice

--- a/invoices.html
+++ b/invoices.html
@@ -178,7 +178,7 @@
           </div>
           <!--  Invoice Items -->
           <div class="flex items-center justify-center text-center">
-            <h2 class="self-center text-lg font-semibold text-vls2 dark:text-vds">Items to Invoice</h2>
+            <h2 class="self-center text-lg font-semibold text-vls2 dark:text-vds">Invoice</h2>
           </div>
           <div class="flex justify-end">
             <button @click="removeAllInvoiceItems()" class="butt-style !p-1.5">Remove All</button>
