add button to invoices discounts

--- a/invoices.html
+++ b/invoices.html
@@ -365,7 +365,7 @@
                     switchOpen = !switchOpen;
                     changeDiscount();
                     calculateTemporaryValues()"
-                        :class="switchOpen ? ' rounded bg-gray-100 text-gray-950 text-sm hover:bg-gray-300 transition duration-300 font-semibold' : ' rounded bg-blue-800 text-white text-sm hover:bg-blue-900 transition duration-300 font-semibold'"
+                        :class="switchOpen ? ' rounded bg-gray-100 text-gray-950 text-sm hover:bg-gray-300 transition duration-300 font-semibold' : ' rounded bg-vla2 text-white text-sm hover:bg-vla3 transition duration-300 font-semibold'"
                         class="px-1.5 py-1 transition duration-300">
                         <svg
                           id="rotateIcon"
