Reworking invoice display 2 - PDF edits - static subtotal, discount & deposit % display correctly

--- a/invoices.html
+++ b/invoices.html
@@ -231,7 +231,7 @@
           <div class="flex-col self-center align-middle text-lg font-medium">
             <h3>
               Subtotal:
-              <span x-text="'£' + subtotal"></span>
+              <span x-text="'£' + staticSubtotal"></span>
             </h3>
             <!-- MARK: Discount -->
             <div class="flex">
