Invoicing section - #note - use textarea removed input

--- a/invoices.html
+++ b/invoices.html
@@ -562,7 +562,7 @@
                     x-show="hoverCardHovered"
                     class="flex h-auto w-[full] items-start space-x-3 rounded-md border border-slate-300 bg-vlp p-4 shadow-sm dark:border-neutral-600 dark:bg-zinc-900"
                     x-transition>
-                    <div class="flex h-full w-full text-vls dark:text-vred-300">
+                    <div class="flex h-full w-full text-vls dark:text-vds">
                       <div class="flex items-center justify-center text-sm">
                         <p
                           x-text="invoiceNote"
@@ -602,20 +602,18 @@
                     <!-- MARK: INVOICE MESSAGE -->
                     <!-- Custom Message for Deposit -->
                     <div>
-                      <div>
-                        <h3 class="modal-title mb-4 text-center !text-xl">Client Note</h3>
-                      </div>
-                      <input
-                        type="text"
-                        maxlength="217"
+                      <h3 class="modal-title mb-4 text-center !text-xl">Client Note</h3>
+                      <textarea
                         x-model="invoiceNotePopover"
                         x-ref="invoiceNotePopover"
                         @input="trackLength()"
-                        class="modal-input-style w-full !py-2 !pl-12"
-                        placeholder="Invoice note..." />
+                        rows="4"
+                        class="modal-input-style w-full !p-2"
+                        placeholder="Invoice note..."
+                        style="resize: vertical; min-height: 100px; max-height: 300px"></textarea>
                     </div>
                     <div class="mb-4">
-                      <h1 x-transition.duration.300 class="text-small mt-2 text-center text-vls dark:text-vred-300">
+                      <h1 x-transition.duration.300 class="text-small mt-2 text-center text-vls dark:text-vds">
                         Characters:
                         <span x-text="noteMaxLength"></span>
                         /
