--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           x-transition:leave-end="opacity-0 translate-y-20"
           class="w-full">
           <!-- Using htmx.process($el) to enable htmx detection on injected elements-->
-          <div x-html="tabContent"></div>
+          <div x-html="globalTabContent"></div>
         </div>
       </div>
 
