--- a/styles.html
+++ b/styles.html
@@ -322,7 +322,7 @@
               type="number"
               min="0"
               step="0.01"
-              placeholder="Time"
+              placeholder="Time (in minutes)"
               class="modal-input-style mb-2 w-full"
               required />
             <input
