--- a/editor.html
+++ b/editor.html
@@ -916,7 +916,7 @@
               type="number"
               min="0"
               step="0.1"
-              placeholder="Time"
+              placeholder="Time (in minutes)"
               class="modal-input-style mb-2 w-full !p-1 text-sm"
               required />
             <input
