--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Invoicing</title>
+    <link rel="icon" type="image/x-icon" href="/images/invoicer.ico"></link>
     <script src="./node_modules/feather-icons/dist/feather.min.js"></script>
     <link rel="stylesheet" href="/css/outputTailwind.css" />
     <script src="https://unpkg.com/htmx.org@2.0.3"></script>
