--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
         hx-ext="alpine-morph"
         hx-swap="morph"
         hx-trigger="load"
-        hx-get="/htmx-alpine-components/toast.html"></div>
+        hx-get="/src/components/toast.html"></div>
       <!--  MARK: TOASTS END  -->
     </div>
 
